fix docs sidebar visibility when there are notifications

--- a/_sass/layouts/_docs.scss
+++ b/_sass/layouts/_docs.scss
@@ -47,7 +47,11 @@
 body.has-notification {
 
   .sticky-docs-navbar {
-    top: calc(#{$notification-bar-height} + 3rem);
+    top: calc(#{$notification-bar-height} + 8rem);
+  }
+
+  .docs-container {
+    margin-top: $notification-bar-height;
   }
 
   :target:before {
